--- a/index.html
+++ b/index.html
@@ -5,6 +5,28 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Amori Runner — Order không suy Nghĩ</title>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-2L0N4MY30Y"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-2L0N4MY30Y');
+</script>
+
+  <!-- Open Graph cho Facebook -->
+   <link rel="icon" type="image/png" href="https://github.com/nhihta/Amori_run/blob/main/imganhzalo.png?raw=true">
+<meta property="og:title" content="Game Amori Runner trên AhaFood.Ai" />
+<meta property="og:description" content="Chơi game Amori Runner vui nhộn và đặt món ngay trên AhaFood.Ai!" />
+<meta property="og:image" content="https://github.com/nhihta/Amori_run/blob/main/imganhzalo.png?raw=true" />
+<meta property="og:url" content="https://ahafood.ai/store" />
+<meta property="og:type" content="website" />
+
+<!-- Zalo Link Preview -->
+<meta name="zalo:image" content="https://github.com/nhihta/Amori_run/blob/main/imganhzalo.png?raw=true" />
+<meta name="zalo:title" content="Game Amori Runner trên AhaFood.Ai" />
+<meta name="zalo:description" content="Chơi game Amori Runner vui nhộn và đặt món ngay trên AhaFood.Ai!" />
   <style>
     :root {
       --sky: #b3e5ff;
