--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </script>
 
   <!-- Open Graph cho Facebook -->
-   <link rel="icon" type="image/png" href="https://github.com/nhihta/Amori_run/blob/main/imganhzalo.png?raw=true">
+   <link rel="icon" type="image/jpg" href="https://github.com/nhihta/Amori_run/blob/main/imganhzalo.png?raw=true">
 <meta property="og:title" content="Game Amori Runner trên AhaFood.Ai" />
 <meta property="og:description" content="Chơi game Amori Runner vui nhộn và đặt món ngay trên AhaFood.Ai!" />
 <meta property="og:image" content="https://github.com/nhihta/Amori_run/blob/main/imganhzalo.png?raw=true" />
@@ -821,5 +821,6 @@
     })();
   </script>
 </body>
+
 
 </html>
