--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
 </script>
 
   <!-- Open Graph cho Facebook -->
-   <link rel="icon" type="image/png" href="https://github.com/nhihta/Amori_run/blob/main/imganhzalo.png?raw=true">
+   <link rel="icon" type="image/png" href="https://github.com/nhihta/Amori_run/blob/main/zaloimg.jpg?raw=true">
 <meta property="og:title" content="Game Amori Runner trên AhaFood.Ai" />
 <meta property="og:description" content="Chơi game Amori Runner vui nhộn và đặt món ngay trên AhaFood.Ai!" />
-<meta property="og:image" content="https://github.com/nhihta/Amori_run/blob/main/imganhzalo.png?raw=true" />
+<meta property="og:image" content="https://github.com/nhihta/Amori_run/blob/main/zaloimg.jpg?raw=true" />
 <meta property="og:url" content="https://ahafood.ai/store" />
 <meta property="og:type" content="website" />
 
 <!-- Zalo Link Preview -->
-<meta name="zalo:image" content="https://github.com/nhihta/Amori_run/blob/main/imganhzalo.png?raw=true" />
+<meta name="zalo:image" content="https://github.com/nhihta/Amori_run/blob/main/zaloimg.jpg?raw=true" />
 <meta name="zalo:title" content="Game Amori Runner trên AhaFood.Ai" />
 <meta name="zalo:description" content="Chơi game Amori Runner vui nhộn và đặt món ngay trên AhaFood.Ai!" />
   <style>
@@ -824,4 +824,5 @@
 
 
 </html>
+
 
